@@ -8,6 +8,8 @@ WinMerge 2.11.1.3
   Add -u commandline parameter as alternative to -ub (#2029275, #2030359)
   Remove RCLocalizationHelper plugin (#2029457)
   Clarify Supercopier caused hang in release notes (#2030040)
+  BugFix: Could change syntax highlight mode when highlighting was
+    disabled from options (#2027325)
 
 WinMerge 2.11.1.2 - 2008-07-24 (r5673)
   Refresh compare after changing filter (#2017426)
